# fileattr

./: .gitignore  CMakeLists.txt  main.c
common/: common.c
fileattr/: lesson01.c  lesson02_umask.c  lesson03_truncate.c  lesson04_holefile.c  lesson05_link.c  lesson06_unlink.c  lesson07_remove.c  lesson08_rename.c  lesson09_symlink.c  lesson10_readlink.c  lesson11_getcwd.c  lesson12_chdir.c  lesson13_mkdir.c  lesson14_rmdir.c  lesson15_opendir.c  lesson16_readdir.c
include/: common.h
